feat: add entity validity state